--- a/WhereWeLivin.csproj
+++ b/WhereWeLivin.csproj
@@ -46,14 +46,14 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="ServerEnter.cs">
-            <SubType>Form</SubType>
-        </Compile>
-        <Compile Include="ServerEnter.Designer.cs">
-            <DependentUpon>ServerEnter.cs</DependentUpon>
-        </Compile>
-        <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="Src\Program.cs" />
+        <Compile Include="Src\ServerEnter.cs">
+          <SubType>Form</SubType>
+        </Compile>
+        <Compile Include="Src\ServerEnter.Designer.cs">
+          <DependentUpon>ServerEnter.cs</DependentUpon>
+        </Compile>
         <EmbeddedResource Include="Properties\Resources.resx">
             <Generator>ResXFileCodeGenerator</Generator>
             <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -63,7 +63,7 @@
             <AutoGen>True</AutoGen>
             <DependentUpon>Resources.resx</DependentUpon>
         </Compile>
-        <EmbeddedResource Include="ServerEnter.resx">
+        <EmbeddedResource Include="Src\ServerEnter.resx">
           <DependentUpon>ServerEnter.cs</DependentUpon>
         </EmbeddedResource>
         <None Include="Properties\Settings.settings">
