--- a/WhereWeLivin.csproj
+++ b/WhereWeLivin.csproj
@@ -47,13 +47,25 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="Src\Program.cs" />
-        <Compile Include="Src\ServerEnter.cs">
+        <Compile Include="Src\Pages\HostEnter.cs">
           <SubType>Form</SubType>
         </Compile>
-        <Compile Include="Src\ServerEnter.Designer.cs">
+        <Compile Include="Src\Pages\HostEnter.Designer.cs">
+          <DependentUpon>HostEnter.cs</DependentUpon>
+        </Compile>
+        <Compile Include="Src\Pages\TemplateForm.cs">
+          <SubType>Form</SubType>
+        </Compile>
+        <Compile Include="Src\Pages\TemplateForm.Designer.cs">
+          <DependentUpon>TemplateForm.cs</DependentUpon>
+        </Compile>
+        <Compile Include="Src\Pages\ServerEnter.cs">
+          <SubType>Form</SubType>
+        </Compile>
+        <Compile Include="Src\Pages\ServerEnter.Designer.cs">
           <DependentUpon>ServerEnter.cs</DependentUpon>
         </Compile>
+        <Compile Include="Src\Program.cs" />
         <EmbeddedResource Include="Properties\Resources.resx">
             <Generator>ResXFileCodeGenerator</Generator>
             <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -63,7 +75,13 @@
             <AutoGen>True</AutoGen>
             <DependentUpon>Resources.resx</DependentUpon>
         </Compile>
-        <EmbeddedResource Include="Src\ServerEnter.resx">
+        <EmbeddedResource Include="Src\Pages\HostEnter.resx">
+          <DependentUpon>HostEnter.cs</DependentUpon>
+        </EmbeddedResource>
+        <EmbeddedResource Include="Src\Pages\TemplateForm.resx">
+          <DependentUpon>TemplateForm.cs</DependentUpon>
+        </EmbeddedResource>
+        <EmbeddedResource Include="Src\Pages\ServerEnter.resx">
           <DependentUpon>ServerEnter.cs</DependentUpon>
         </EmbeddedResource>
         <None Include="Properties\Settings.settings">
