--- a/WhereWeLivin.csproj
+++ b/WhereWeLivin.csproj
@@ -47,6 +47,8 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="Src\Network\Client.cs" />
+        <Compile Include="Src\Network\Server.cs" />
         <Compile Include="Src\Pages\HostEnter.cs">
           <SubType>Form</SubType>
         </Compile>
