--- a/WhereWeLivin.csproj
+++ b/WhereWeLivin.csproj
@@ -49,6 +49,12 @@
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Src\Network\Client.cs" />
         <Compile Include="Src\Network\Server.cs" />
+        <Compile Include="Src\Pages\GameClient.cs">
+          <SubType>Form</SubType>
+        </Compile>
+        <Compile Include="Src\Pages\GameClient.Designer.cs">
+          <DependentUpon>GameClient.cs</DependentUpon>
+        </Compile>
         <Compile Include="Src\Pages\HostEnter.cs">
           <SubType>Form</SubType>
         </Compile>
@@ -77,6 +83,9 @@
             <AutoGen>True</AutoGen>
             <DependentUpon>Resources.resx</DependentUpon>
         </Compile>
+        <EmbeddedResource Include="Src\Pages\GameClient.resx">
+          <DependentUpon>GameClient.cs</DependentUpon>
+        </EmbeddedResource>
         <EmbeddedResource Include="Src\Pages\HostEnter.resx">
           <DependentUpon>HostEnter.cs</DependentUpon>
         </EmbeddedResource>
